Added deletion/adding functionality

--- a/CV.Management.Web/Views/Shared/_AdditionalCourses.cshtml
+++ b/CV.Management.Web/Views/Shared/_AdditionalCourses.cshtml
@@ -52,7 +52,7 @@
 
         <div class="row">
             <div class="col-md-12 text-center add-button">
-                <p><img id="position_add" src="~/Content/Images/add.png" /> ADD COURSE</p>
+                <p><img id="additional_course_add" src="~/Content/Images/add.png" /> ADD COURSE</p>
             </div>
         </div>
         <div class="row">
