--- a/CV.Management.Web/Views/Shared/_Layout.cshtml
+++ b/CV.Management.Web/Views/Shared/_Layout.cshtml
@@ -21,11 +21,12 @@
                 </button>
                 <a class="navbar-brand" href="/"><img src="~/Content/Images/logo.png" alt="Amrop"></a>
             </div>
-            <ul class="nav navbar-nav">
-                <li><a href="/cv/profile/en">EN</a></li>
-                <li><a href="/cv/profile/lv">LV</a></li>
-            </ul>
             <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="/cv/profile/en">EN</a></li>
+                    <li><a href="/cv/profile/lv">LV</a></li>
+                    <li><a href="/api/worddocument">Download Word</a></li>
+                </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
