--- a/CV.Management.Web/Views/Shared/_CareerSummary.cshtml
+++ b/CV.Management.Web/Views/Shared/_CareerSummary.cshtml
@@ -16,7 +16,7 @@
                     <div class="col-md-12">
                         <div class="row">
                             <div class="col-md-12">
-                                <h5>COMPANY #<span>1</span></h5>
+                                <h5>COMPANY #<span class="company-number">@(i + 1)</span></h5>
                             </div>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                         {
                             <div class="position_row row">
                                 <div class="col-md-11 col-md-offset-1">
-                                    <h5>POSITION #<span>1</span></h5>
+                                    <h5>POSITION #<span class="position-number">@(j + 1)</span></h5>
                                 </div>
                                 <div class="col-md-11">
                                     <div class="row">
