--- a/CV.Management.Web/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/CV.Management.Web/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,8 +1,6 @@
 ﻿@model CV.Management.Web.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
-<hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
     if (loginProviders.Count() == 0) {
@@ -17,7 +15,7 @@
         using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl })) {
             @Html.AntiForgeryToken()
             <div id="socialLoginList">
-                <p>
+                <p class="external-login-list">
                     @foreach (AuthenticationDescription p in loginProviders) {
                         <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
                     }
