Added new fields and tables. Picture generation done. Now fields are disabling and clearing values. Weird bug started.

--- a/CV.Management.Web/Views/Shared/_FileUpload.cshtml
+++ b/CV.Management.Web/Views/Shared/_FileUpload.cshtml
@@ -2,7 +2,7 @@
 
 <div class="row text-center">
     @if (!string.IsNullOrEmpty(Model.ImageSrc)) {
-        <img src="Model.ImageSrc" class="profile-image img-rounded"/>
+        <img src="@Model.ImageSrc" class="profile-image img-rounded"/>
     }
     else {
         <img src="~/Content/Images/default_pic.png" class="img-rounded" />
