Added additional files, language location mostly done. Small bug fixes and improvements.

--- a/CV.Management.Web/Content/main.css
+++ b/CV.Management.Web/Content/main.css
@@ -129,3 +129,11 @@ html, body {
     padding-top: 20px;
     padding-bottom: 40px;
 }
+
+.additional-files-label {
+    font-weight: bold;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
