--- a/CV.Management.Web/Views/Shared/_FileUpload.cshtml
+++ b/CV.Management.Web/Views/Shared/_FileUpload.cshtml
@@ -16,7 +16,7 @@
             <input id="file_upload" type="file" name="file" class="btn btn-default" />
         </div>
         <div class="col-md-12">
-            <input id="file_save" type="submit" name="Submit" id="Submit" value="Upload" class="btn btn-primary" />
+            <input id="file_save" type="submit" name="Submit" id="Submit" value="@Resources.Upload" class="btn btn-primary" />
         </div>
     }
 </div>
