--- a/CV.Management.Web/Views/Shared/_AdditionalComments.cshtml
+++ b/CV.Management.Web/Views/Shared/_AdditionalComments.cshtml
@@ -11,7 +11,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     @Html.LabelFor(model => Model.Comments, new { @class = "control-label" })
-                    @Html.TextAreaFor(model => Model.Comments, new { @class = "form-control" })
+                    @Html.TextAreaFor(model => Model.Comments, new { @class = "form-control", @rows = 5 })
                     @Html.ValidationMessageFor(model => Model.Comments)
                 </div>
             </div>
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group text-right">
-                    <input type="submit" value="Save" class="btn btn-primary float-right" />
+                    <input type="submit" value="@Resources.Save" class="btn btn-primary float-right" />
                 </div>
             </div>
         </div>
