--- a/CV.Management.Web/Views/Shared/_AdditionalCourses.cshtml
+++ b/CV.Management.Web/Views/Shared/_AdditionalCourses.cshtml
@@ -52,13 +52,13 @@
 
         <div class="row">
             <div class="col-md-12 text-center add-button">
-                <p><img id="additional_course_add" src="~/Content/Images/add.png" /> ADD COURSE</p>
+                <p class="uppercase"><img id="additional_course_add" src="~/Content/Images/add.png" /> @Resources.AddCourse</p>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group text-right">
-                    <input type="submit" value="Save" class="btn btn-primary float-right" />
+                    <input type="submit" value="@Resources.Save" class="btn btn-primary float-right" />
                 </div>
             </div>
         </div>
