--- a/CV.Management.Web/Views/Shared/_Education.cshtml
+++ b/CV.Management.Web/Views/Shared/_Education.cshtml
@@ -59,14 +59,14 @@
 
         <div class="row">
             <div class="col-md-12 text-center add-button">
-                <p><img id="education_add" src="~/Content/Images/add.png" /> ADD EDUCATION</p>
+                <p class="uppercase"><img id="education_add" src="~/Content/Images/add.png" /> @Resources.AddEducation</p>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group text-right">
-                    <input type="submit" value="Save" class="btn btn-primary float-right" />
+                    <input type="submit" value="@Resources.Save" class="btn btn-primary float-right" />
                 </div>
             </div>
         </div>
