--- a/CV.Management.Web/Views/Shared/_Language.cshtml
+++ b/CV.Management.Web/Views/Shared/_Language.cshtml
@@ -46,13 +46,13 @@
 
         <div class="row">
             <div class="col-md-12 text-center add-button">
-                <p><img id="language_add" src="~/Content/Images/add.png" /> ADD LANGUAGE</p>
+                <p class="uppercase"><img id="language_add" src="~/Content/Images/add.png" /> @Resources.AddLanguage</p>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group text-right">
-                    <input type="submit" value="Save" class="btn btn-primary float-right" />
+                    <input type="submit" value="@Resources.Save" class="btn btn-primary float-right" />
                 </div>
             </div>
         </div>
