--- a/CV.Management.Web/Views/Shared/_PersonalInformation.cshtml
+++ b/CV.Management.Web/Views/Shared/_PersonalInformation.cshtml
@@ -66,7 +66,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group text-right">
-                        <input type="submit" value="Save" class="btn btn-primary float-right" />
+                        <input type="submit" value="@Resources.Save" class="btn btn-primary float-right" />
                     </div>
                 </div>
             </div>
