--- a/CV.Management.Web/Views/Account/Login.cshtml
+++ b/CV.Management.Web/Views/Account/Login.cshtml
@@ -1,6 +1,10 @@
 ﻿@using CV.Management.Web.Models
 @model LoginViewModel
 
+@{
+    Layout = "_AccountLayout.cshtml";
+}
+
 <div class="row">
     <div class="col-md-12">
         <section id="loginForm">
