--- a/CV.Management.Web/Views/Admin/_AdminLayout.cshtml
+++ b/CV.Management.Web/Views/Admin/_AdminLayout.cshtml
@@ -1,5 +1,4 @@
-﻿@model CV.Management.Web.Models.ViewModelBase
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -8,7 +7,7 @@
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    
+
 
 </head>
 <body>
@@ -23,15 +22,7 @@
                 <a class="navbar-brand" href="/"><img src="~/Content/Images/logo.png" alt="Amrop"></a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="/cv/profile/en">EN</a></li>
-                    <li><a href="/cv/profile/lv">LV</a></li>
-                    <li><a href="/api/worddocument">Download Word</a></li>
-                </ul>
-                @Html.Partial("_LoginPartial", new CV.Management.Web.Models.LoginPartialViewModel
-                   {
-                       FullName = Model.Name
-                   })
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
