--- a/CV.Management.Web/Views/Shared/_LoginPartial.cshtml
+++ b/CV.Management.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,6 @@
-﻿@if (Request.IsAuthenticated)
+﻿@model CV.Management.Web.Models.LoginPartialViewModel
+
+@if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
@@ -6,7 +8,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink(@Resources.Hello + " " + User.Identity.Name + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink(@Resources.Hello + " " + Model.FullName + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
