--- a/CV.Management.Web/Views/Shared/_Layout.cshtml
+++ b/CV.Management.Web/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li><a href="/cv/profile/en">EN</a></li>
                     <li><a href="/cv/profile/lv">LV</a></li>
                     <li><a href="/api/worddocument">Download Word</a></li>
+                    <li><a href="/api/pptdocument">Download PPT</a></li>
                 </ul>
                 @Html.Partial("_LoginPartial", new CV.Management.Web.Models.LoginPartialViewModel
                    {
