--- a/CV.Management.Web/Views/Manage/Index.cshtml
+++ b/CV.Management.Web/Views/Manage/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model CV.Management.Web.Models.IndexViewModel
 @{
     ViewBag.Title = "Manage";
+    Layout = "_AccountLayout.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
