--- a/CV.Management.Web/Views/Manage/SetPassword.cshtml
+++ b/CV.Management.Web/Views/Manage/SetPassword.cshtml
@@ -1,39 +1,61 @@
 ﻿@model CV.Management.Web.Models.SetPasswordViewModel
 @{
-    ViewBag.Title = "Create Password";
+    Layout = "_AccountLayout.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
-<p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
-</p>
+<div class="row">
+    <div class="col-md-12">
 
-@using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
+        @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary("", new { @class = "text-danger" })
 
-    <h4>Create Local Login</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-        </div>
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <img src="~/Content/Images/logo.png" alt="Amrop" class="login-image">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <p class="text-info">
+                        You do not have a local username/password for this site. Add a local
+                        account so you can log in without an external login.
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.NewPassword, new { @class = "control-label" })
+                        @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label" })
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="form-group">
+                        <input type="submit" value="Set password" class="btn btn-default" />
+                    </div>
+                </div>
+            </div>
+        }
+
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Set password" class="btn btn-default" />
-        </div>
-    </div>
-}
+</div>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
