--- a/CV.Management.Web/Views/Account/ConfirmEmail.cshtml
+++ b/CV.Management.Web/Views/Account/ConfirmEmail.cshtml
@@ -1,10 +1,21 @@
 ﻿@{
-    ViewBag.Title = "Confirm Email";
+    Layout = "_AccountLayout.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div>
-    <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+<div class="row">
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <img src="~/Content/Images/logo.png" alt="Amrop" class="login-image">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <p>
+                    Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
