--- a/CV.Management.Web/Views/Account/ExternalLoginFailure.cshtml
+++ b/CV.Management.Web/Views/Account/ExternalLoginFailure.cshtml
@@ -1,8 +1,19 @@
 ﻿@{
-    ViewBag.Title = "Login Failure";
+    Layout = "_AccountLayout.cshtml";
 }
 
-<hgroup>
-    <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Unsuccessful login with service.</h3>
-</hgroup>
+<div class="row">
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <img src="~/Content/Images/logo.png" alt="Amrop" class="login-image">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <h3 class="text-danger">Unsuccessful login with service.</h3>
+            </div>
+        </div>
+    </div>
+</div>
