--- a/CV.Management.Web/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/CV.Management.Web/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,21 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+    Layout = "_AccountLayout.cshtml";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
+<div class="row">
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <img src="~/Content/Images/logo.png" alt="Amrop" class="login-image">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <p>
+                    Please check your email to reset your password.
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
-	
