--- a/CV.Management.Web/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/CV.Management.Web/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,12 +1,22 @@
 ﻿@{
-    ViewBag.Title = "Reset password confirmation";
+    Layout = "_AccountLayout.cshtml";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+<div class="row">
+    <div class="col-md-12">
+
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <img src="~/Content/Images/logo.png" alt="Amrop" class="login-image">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <p>
+                    Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
