--- a/CV.Management.Web/Views/Manage/ChangePassword.cshtml
+++ b/CV.Management.Web/Views/Manage/ChangePassword.cshtml
@@ -1,9 +1,58 @@
 ﻿@model CV.Management.Web.Models.ChangePasswordViewModel
 @{
-    ViewBag.Title = "Change Password";
+    Layout = "_AccountLayout.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="row">
+    <div class="col-md-12">
+        @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <img src="~/Content/Images/logo.png" alt="Amrop" class="login-image">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.OldPassword, new { @class = "control-label" })
+                        @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.NewPassword, new { @class = "control-label" })
+                        @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label" })
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="form-group">
+                        <input type="submit" value="Change password" class="btn btn-default" />
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
 
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
