--- a/CV.Management.Web/Views/Manage/ManageLogins.cshtml
+++ b/CV.Management.Web/Views/Manage/ManageLogins.cshtml
@@ -2,6 +2,7 @@
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
+    Layout = "_AccountLayout.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
