--- a/CV.Management.Web/Views/Cv/Profile.cshtml
+++ b/CV.Management.Web/Views/Cv/Profile.cshtml
@@ -7,7 +7,7 @@
 
 <div class="panel-group" id="accordion">
     <div class="panel panel-default">
-        <div class="panel-heading" data-toggle="collapse" data-target="#collapse1">
+        <div class="panel-heading panel-light-blue" data-toggle="collapse" data-target="#collapse1">
             <h4 class="panel-title uppercase">
                 @Resources.Personal
             </h4>
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="panel panel-default">
-        <div class="panel-heading" data-toggle="collapse" data-target="#collapse2">
+        <div class="panel-heading panel-green" data-toggle="collapse" data-target="#collapse2">
             <h4 class="panel-title uppercase">
                     @Resources.Education
             </h4>
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div class="panel panel-default">
-        <div class="panel-heading" data-toggle="collapse" data-target="#collapse3">
+        <div class="panel-heading panel-middle-blue" data-toggle="collapse" data-target="#collapse3">
             <h4 class="panel-title uppercase">
                 @Resources.Courses
             </h4>
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="panel panel-default">
-        <div class="panel-heading" data-toggle="collapse" data-target="#collapse4">
+        <div class="panel-heading panel-pink" data-toggle="collapse" data-target="#collapse4">
             <h4 class="panel-title uppercase">
                 @Resources.Language
             </h4>
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="panel panel-default">
-        <div class="panel-heading" data-toggle="collapse" data-target="#collapse5">
+        <div class="panel-heading panel-red" data-toggle="collapse" data-target="#collapse5">
             <h4 class="panel-title uppercase">
                 @Resources.CareerSummary
             </h4>
@@ -76,7 +76,7 @@
         </div>
     </div>
     <div class="panel panel-default">
-        <div class="panel-heading" data-toggle="collapse" data-target="#collapse6">
+        <div class="panel-heading panel-heavy-blue" data-toggle="collapse" data-target="#collapse6">
             <h4 class="panel-title uppercase">
                 @Resources.Memberships
             </h4>
@@ -88,7 +88,7 @@
         </div>
     </div>
     <div class="panel panel-default">
-        <div class="panel-heading" data-toggle="collapse" data-target="#collapse7">
+        <div class="panel-heading panel-orange" data-toggle="collapse" data-target="#collapse7">
             <h4 class="panel-title uppercase">
                 @Resources.Compensation
             </h4>
@@ -100,7 +100,7 @@
         </div>
     </div>
     <div class="panel panel-default">
-        <div class="panel-heading" data-toggle="collapse" data-target="#collapse8">
+        <div class="panel-heading panel-light-blue" data-toggle="collapse" data-target="#collapse8">
             <h4 class="panel-title uppercase">
                 @Resources.NoticePeriodLabel
             </h4>
@@ -112,7 +112,7 @@
         </div>
     </div>
     <div class="panel panel-default">
-        <div class="panel-heading" data-toggle="collapse" data-target="#collapse9">
+        <div class="panel-heading panel-green" data-toggle="collapse" data-target="#collapse9">
             <h4 class="panel-title uppercase">
                 @Resources.AdditionalComments
             </h4>
