--- a/CV.Management.Web/Views/Shared/_CareerSummary.cshtml
+++ b/CV.Management.Web/Views/Shared/_CareerSummary.cshtml
@@ -178,7 +178,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-offset-1 col-md-10 text-center">
-                            <p class="uppercase"><img class="position_add" src="~/Content/Images/add.png" /> @Resources.AddPosition</p>
+                            <span id="position_add" class="tab_more uppercase">@Resources.AddPosition</span>
                         </div>
                     </div>
                 </div>
@@ -186,7 +186,7 @@
         </div>
 
         <div class="col-md-12 text-center add-button">
-            <p class="uppercase"><img id="career_summary_add" src="~/Content/Images/add.png" /> @Resources.AddCompany</p>
+            <span id="career_summary_add" class="tab_more uppercase">@Resources.AddCompany</span>
         </div>
         <div class="col-md-12">
             <div class="row">
