--- a/CV.Management.Web/Views/Shared/_Education.cshtml
+++ b/CV.Management.Web/Views/Shared/_Education.cshtml
@@ -59,7 +59,7 @@
 
         <div class="row">
             <div class="col-md-12 text-center add-button">
-                <p class="uppercase"><img id="education_add" src="~/Content/Images/add.png" /> @Resources.AddEducation</p>
+                <span id="education_add" class="tab_more uppercase">@Resources.AddEducation</span>
             </div>
         </div>
 
