--- a/CV.Management.Web/Views/Shared/_Language.cshtml
+++ b/CV.Management.Web/Views/Shared/_Language.cshtml
@@ -46,7 +46,7 @@
 
         <div class="row">
             <div class="col-md-12 text-center add-button">
-                <p class="uppercase"><img id="language_add" src="~/Content/Images/add.png" /> @Resources.AddLanguage</p>
+                <span id="language_add" class="tab_more uppercase">@Resources.AddLanguage</span>
             </div>
         </div>
         <div class="row">
