--- a/CV.Management.Web/Content/main.css
+++ b/CV.Management.Web/Content/main.css
@@ -22,6 +22,10 @@
     padding-bottom: 30px;
 }
 
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+    color: #231f20;
+}
+
 .navbar-toggle {
     padding: 10px;
     margin: 25px 15px 25px 0;
@@ -65,9 +69,9 @@ html, body {
 }
 
 #file_upload, #file_save {
-    max-width:100%;
-    margin-top:20px;
-    width:100%;
+    max-width: 100%;
+    margin-top: 20px;
+    width: 100%;
 }
 
 .personal-information {
@@ -80,7 +84,13 @@ html, body {
 
 .add-button {
     padding-top: 20px;
+    color: #3687c4;
 }
+
+    .add-button:hover {
+        padding-top: 20px;
+        color: #231f20;
+    }
 
 .remove-button {
     padding-top: 34px;
@@ -136,4 +146,150 @@ html, body {
 
 .uppercase {
     text-transform: uppercase;
+}
+
+.tab_more {
+    display: table;
+    margin: 38px auto;
+    padding-left: 35px;
+    font-size: 12px;
+    color: #1c74bb;
+    text-transform: uppercase;
+    height: 24px;
+    line-height: 24px;
+    background: url(Images/add.png) no-repeat left center;
+}
+
+    .tab_more:hover {
+        background: url(Images/add_h.png) no-repeat left center;
+        color: #231f20;
+        cursor: pointer;
+    }
+
+.download_word {
+    padding-left: 35px;
+    font-size: 24px;
+    color: #1c74bb;
+    text-transform: uppercase;
+    background: url(Images/docs.png) no-repeat left center;
+}
+
+    .download_word:hover {
+        background: url(Images/docs_h.png) no-repeat left center;
+        color: #231f20;
+        cursor: pointer;
+    }
+
+.download_ppt {
+    padding-left: 35px;
+    font-size: 24px;
+    color: #1c74bb;
+    text-transform: uppercase;
+    background: url(Images/pptx.png) no-repeat left center;
+}
+
+    .download_ppt:hover {
+        background: url(Images/pptx_h.png) no-repeat left center;
+        color: #231f20;
+        cursor: pointer;
+    }
+
+/* CUSTOM STUFF */
+
+.panel-title {
+    font-size: 16px;
+    text-transform: uppercase;
+    color: white;
+}
+
+.panel {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    padding-bottom: 15px;
+}
+
+.panel-heading {
+    padding: 16px 15px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+.panel-group .panel {
+    border-radius: 0px;
+}
+
+.panel-default {
+    border-color: #FFFFFF;
+}
+        .panel-default > .panel-heading + .panel-collapse > .panel-body {
+            background-color: #FFFFFF;
+            border-top-color: #FFFFFF;
+        }
+
+.panel-group .panel-heading + .panel-collapse > .panel-body, .panel-group .panel-heading + .panel-collapse > .list-group {
+    border-top: 0px;
+}
+
+.panel-default > .panel-green {
+    background-color: #009347;
+}
+
+.panel-default > .panel-middle-blue {
+    background-color: #1c74bb;
+}
+
+.panel-default > .panel-pink {
+    background-color: #a21f60;
+}
+
+.panel-default > .panel-red {
+    background-color: #c31826;
+}
+
+.panel-default > .panel-heavy-blue {
+    background-color: #262261;
+}
+
+.panel-default > .panel-orange {
+    background-color: #f15a29;
+}
+
+.panel-default > .panel-light-blue {
+    background-color: #32bdea;
+}
+
+.btn {
+    border-radius: 0px;
+}
+
+.btn-primary {
+    background-color: #1a76bc;
+    border-color: #1a76bc; 
+    color: #FFFFFF;
+}
+
+    .btn-primary:hover {
+        background-color: #FFFFFF;
+        border-color: #1a76bc;
+        color: #1a76bc;
+    }
+
+.form-control {
+    border-radius: 0px;
+}
+
+.file-upload-wrapper {
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+}
+
+    .file-upload-wrapper input[type=file] {
+        opacity: 0;
+    }
+
+.upload-button {
+    background-color: #FFFFFF;
+    border-color: #1a76bc;
+    color: #1a76bc;
 }
