--- a/CV.Management.Web/Views/Admin/Overview.cshtml
+++ b/CV.Management.Web/Views/Admin/Overview.cshtml
@@ -27,9 +27,10 @@
                     @for (var i = 0; i < Model.Profiles.Count; i++)
                     {
                     <tr>
+                        @Html.HiddenFor(t => Model.Profiles[i].ProfileId)
                         <td>@Model.Profiles[i].FullName</td>
                         <td>@Model.Profiles[i].Username</td>
-                        <td></td>
+                        <td><span class="download_word"></span> <span class="download_ppt"></span></td>
                     </tr>
                     }
                 </tbody>
