--- a/CV.Management.Web/Views/Shared/_AdditionalCourses.cshtml
+++ b/CV.Management.Web/Views/Shared/_AdditionalCourses.cshtml
@@ -52,7 +52,7 @@
 
         <div class="row">
             <div class="col-md-12 text-center add-button">
-                <p class="uppercase"><img id="additional_course_add" src="~/Content/Images/add.png" /> @Resources.AddCourse</p>
+                <span id="additional_course_add" class="tab_more uppercase">@Resources.AddCourse</span>
             </div>
         </div>
         <div class="row">
