--- a/CV.Management.Web/Views/Shared/_FileUpload.cshtml
+++ b/CV.Management.Web/Views/Shared/_FileUpload.cshtml
@@ -1,10 +1,12 @@
 ﻿@model CV.Management.Web.Models.FileUploadViewModel
 
 <div class="row text-center">
-    @if (!string.IsNullOrEmpty(Model.ImageSrc)) {
-        <img src="@Model.ImageSrc" class="profile-image img-rounded"/>
+    @if (!string.IsNullOrEmpty(Model.ImageSrc))
+    {
+        <img src="@Model.ImageSrc" class="profile-image img-rounded" />
     }
-    else {
+    else
+    {
         <img src="~/Content/Images/default_pic.png" class="img-rounded" />
     }
 </div>
@@ -13,7 +15,7 @@
     @using (Html.BeginForm("Upload", "Cv", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         <div class="col-md-12">
-            <input id="file_upload" type="file" name="file" class="btn btn-default" />
+            <input id="file_upload" type="file" name="file" class="btn btn-default upload-button" />
         </div>
         <div class="col-md-12">
             <input id="file_save" type="submit" name="Submit" id="Submit" value="@Resources.Upload" class="btn btn-primary" />
