--- a/CV.Management.Web/Views/Shared/_Memberships.cshtml
+++ b/CV.Management.Web/Views/Shared/_Memberships.cshtml
@@ -52,7 +52,7 @@
 
         <div class="row">
             <div class="col-md-12 text-center">
-                <p class="uppercase"><img id="membership_add" src="~/Content/Images/add.png" /> @Resources.AddMembership</p>
+                <span id="membership_add" class="tab_more uppercase">@Resources.AddMembership</span>
             </div>
         </div>
 
